ansible/oracle/roles/kube-manifest/templates/traefik-old/traefik-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: oracle-default
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          args:
            - --accesslog=true
            - --api
            - --api.insecure=true
            - --api.dashboard=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetescrd=true
            - --providers.kubernetescrd.endpoint=http://10.0.10.206:6443
            - --providers.kubernetescrd.token="mc6vs8.q6c9tr2ogk3fsf6q"
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
            - name: websecure
              containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: oracle-default
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 80
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8081
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-route
  namespace: oracle-default
  #annotations: 
    #kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Method(`GET`)
      kind: Rule
      services:
        - name: libreddit-service
          port: 8090
